--- a/Config/i4_startup-config.cfg
+++ b/Config/i4_startup-config.cfg
@@ -53,6 +53,7 @@ ip tcp synwait-time 5
 !
 interface Loopback0
  ip address 4.4.4.4 255.255.255.255
+ ip ospf 1 area 0
 !
 interface FastEthernet0/0
  no ip address
@@ -61,6 +62,7 @@ interface FastEthernet0/0
 !
 interface GigabitEthernet1/0
  ip address 10.1.3.2 255.255.255.0
+ ip ospf 1 area 0
  negotiation auto
  mpls ip
 !
