--- a/Config/PE1.cfg
+++ b/Config/PE1.cfg
@@ -1,36 +1,84 @@
+!
 version 15.2
 service timestamps debug datetime msec
 service timestamps log datetime msec
+!
 hostname PE1
+!
 boot-start-marker
 boot-end-marker
+!
+!
+!
 no aaa new-model
 no ip icmp rate-limit unreachable
 ip cef
+!
+!
+!
+!
+!
+!
 no ip domain lookup
 no ipv6 cef
+!
+!
 mpls label protocol ldp
 multilink bundle-name authenticated
+!
+!
+!
+!
+!
+!
+!
+!
+!
 ip tcp synwait-time 5
+! 
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
 !
 interface Loopback0
  ip address 1.1.1.1 255.255.255.255
  ip ospf 1 area 0
+!
+interface FastEthernet0/0
+ no ip address
+ shutdown
+ duplex full
+!
 interface GigabitEthernet1/0
- ip address 10.1.1.2 255.255.255.0
- ip ospf 1 area 
+ ip address 10.1.1.1 255.255.255.0
+ ip ospf 1 area 0
  negotiation auto
  mpls ip
+!
 router ospf 1
- router-id Loopback0
- network Loopback0 0.0.0.0 area 0
- network 10.1.1.0 0.0.0.255 area 0
+ router-id 1.1.1.1
+ network 1.1.1.1 0.0.0.0 area 0
+ network 10.1.1.1 0.0.0.255 area 0
+!
 ip forward-protocol nd
+!
+!
 no ip http server
 no ip http secure-server
 !
 !
+!
+!
 control-plane
+!
+!
 line con 0
  exec-timeout 0 0
  privilege level 15
