--- a/Config/i3_startup-config.cfg
+++ b/Config/i3_startup-config.cfg
@@ -53,6 +53,7 @@ ip tcp synwait-time 5
 !
 interface Loopback0
  ip address 3.3.3.3 255.255.255.255
+ ip ospf 1 area 0
 !
 interface FastEthernet0/0
  no ip address
