--- a/Config/P1.cfg
+++ b/Config/P1.cfg
@@ -73,6 +73,23 @@ router ospf 1
  network 2.2.2.2 0.0.0.0 area 0
  network 10.1.1.2 0.0.0.255 area 0
  network 10.1.2.2 0.0.0.255 area 0
+ mpls ldp autoconfig area 0
+!
+router bgp 100
+ bgp router-id 2.2.2.2
+ bgp log-neighbor-changes
+ neighbor 1.1.1.1 remote-as 100
+ neighbor 1.1.1.1 update-source Loopback0
+ neighbor 3.3.3.3 remote-as 100
+ neighbor 3.3.3.3 update-source Loopback0
+ neighbor 4.4.4.4 remote-as 100
+ neighbor 4.4.4.4 update-source Loopback0
+!
+address-family vpnv4
+ neighbor 1.1.1.1 activate
+ neighbor 3.3.3.3 activate
+ neighbor 4.4.4.4 activate
+exit-address-family
 !
 ip forward-protocol nd
 !
