--- a/Config/PE1.cfg
+++ b/Config/PE1.cfg
@@ -66,6 +66,23 @@ router ospf 1
  router-id 1.1.1.1
  network 1.1.1.1 0.0.0.0 area 0
  network 10.1.1.1 0.0.0.255 area 0
+ mpls ldp autoconfig area 0
+!
+router bgp 100
+ bgp router-id 1.1.1.1
+ bgp log-neighbor-changes
+ neighbor 2.2.2.2 remote-as 100
+ neighbor 2.2.2.2 update-source Loopback0
+ neighbor 3.3.3.3 remote-as 100
+ neighbor 3.3.3.3 update-source Loopback0
+ neighbor 4.4.4.4 remote-as 100
+ neighbor 4.4.4.4 update-source Loopback0
+!
+address-family vpnv4
+ neighbor 2.2.2.2 activate
+ neighbor 3.3.3.3 activate
+ neighbor 4.4.4.4 activate
+exit-address-family
 !
 ip forward-protocol nd
 !
