--- a/Config/PE2.cfg
+++ b/Config/PE2.cfg
@@ -66,6 +66,23 @@ router ospf 1
  router-id 4.4.4.4
  network 4.4.4.4 0.0.0.0 area 0
  network 10.1.3.4 0.0.0.255 area 0
+ mpls ldp autoconfig area 0
+!
+router bgp 100
+ bgp router-id 4.4.4.4
+ bgp log-neighbor-changes
+ neighbor 1.1.1.1 remote-as 100
+ neighbor 1.1.1.1 update-source Loopback0
+ neighbor 2.2.2.2 remote-as 100
+ neighbor 2.2.2.2 update-source Loopback0
+ neighbor 3.3.3.3 remote-as 100
+ neighbor 3.3.3.3 update-source Loopback0
+!
+address-family vpnv4
+ neighbor 1.1.1.1 activate
+ neighbor 2.2.2.2 activate
+ neighbor 3.3.3.3 activate
+exit-address-family
 !
 ip forward-protocol nd
 !
