--- a/project-files/dynamips/380eed2a-0cae-443d-8343-05816400307b/configs/i11_startup-config.cfg
+++ b/project-files/dynamips/380eed2a-0cae-443d-8343-05816400307b/configs/i11_startup-config.cfg
@@ -1,13 +1,15 @@
 !
+!
+!
 
 !
-! Last configuration change at 19:07:22 UTC Fri Mar 24 2023
+! Last configuration change at 16:09:21 UTC Wed Apr 12 2023
 !
 version 15.2
 service timestamps debug datetime msec
 service timestamps log datetime msec
 !
-hostname CE2
+hostname ASBR1
 !
 boot-start-marker
 boot-end-marker
@@ -52,7 +54,7 @@ ip tcp synwait-time 5
 !
 !
 interface Loopback0
- ip address 20.20.20.20 255.255.255.255
+ ip address 50.50.50.50 255.255.255.255
 !
 interface FastEthernet0/0
  no ip address
@@ -60,20 +62,42 @@ interface FastEthernet0/0
  duplex full
 !
 interface GigabitEthernet1/0
- ip address 20.1.2.1 255.255.255.0
+ ip address 192.10.1.1 255.255.255.0
  negotiation auto
 !
-router bgp 300
+interface GigabitEthernet2/0
+ no ip address
+ shutdown
+ negotiation auto
+!
+interface GigabitEthernet3/0
+ no ip address
+ shutdown
+ negotiation auto
+!
+interface GigabitEthernet4/0
+ no ip address
+ shutdown
+ negotiation auto
+!
+router bgp 1000
  bgp log-neighbor-changes
- network 20.1.2.0 mask 255.255.255.0
- network 20.20.20.20 mask 255.255.255.255
- neighbor 20.1.2.2 remote-as 100
+ neighbor 1.1.1.1 remote-as 100
+ neighbor 1.1.1.1 ebgp-multihop 2
+ neighbor 1.1.1.1 update-source Loopback0
+ !
+ address-family ipv4
+  network 50.50.50.50 mask 255.255.255.255
+  network 192.10.1.0
+  neighbor 1.1.1.1 activate
+ exit-address-family
 !
 ip forward-protocol nd
 !
 !
 no ip http server
 no ip http secure-server
+ip route 1.1.1.1 255.255.255.255 192.10.1.2
 !
 !
 !
