--- a/project-files/dynamips/1670c5da-2c65-4c1e-b99c-dcc16b8d61e6/configs/i9_startup-config.cfg
+++ b/project-files/dynamips/1670c5da-2c65-4c1e-b99c-dcc16b8d61e6/configs/i9_startup-config.cfg
@@ -4,39 +4,13 @@
 !
 !
 !
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
 
-!
-! Last configuration change at 15:45:24 UTC Wed Mar 22 2023
 !
 version 15.2
 service timestamps debug datetime msec
 service timestamps log datetime msec
 !
-hostname P2
+hostname sharing
 !
 boot-start-marker
 boot-end-marker
@@ -56,7 +30,6 @@ no ip domain lookup
 no ipv6 cef
 !
 !
-mpls label protocol ldp
 multilink bundle-name authenticated
 !
 !
@@ -81,8 +54,7 @@ ip tcp synwait-time 5
 !
 !
 interface Loopback0
- ip address 3.3.3.3 255.255.255.255
- ip ospf 10 area 0
+ ip address 100.100.100.100 255.255.255.255
 !
 interface FastEthernet0/0
  no ip address
@@ -90,16 +62,13 @@ interface FastEthernet0/0
  duplex full
 !
 interface GigabitEthernet1/0
- ip address 10.1.2.2 255.255.255.0
- ip ospf 10 area 0
+ ip address 100.100.100.1 255.255.255.0
  negotiation auto
- mpls ip
 !
 interface GigabitEthernet2/0
- ip address 10.1.3.1 255.255.255.0
- ip ospf 10 area 0
+ no ip address
+ shutdown
  negotiation auto
- mpls ip
 !
 interface GigabitEthernet3/0
  no ip address
@@ -111,28 +80,11 @@ interface GigabitEthernet4/0
  shutdown
  negotiation auto
 !
-router ospf 10
- router-id 3.3.3.3
- network 3.3.3.3 0.0.0.0 area 0
- network 10.1.2.0 0.0.0.255 area 0
- network 10.1.3.0 0.0.0.255 area 0
-!
-router bgp 100
- bgp router-id 3.3.3.3
+router bgp 600
  bgp log-neighbor-changes
- neighbor 2.2.2.2 remote-as 100
- neighbor 2.2.2.2 update-source Loopback0
- neighbor 1.1.1.1 remote-as 100
- neighbor 1.1.1.1 update-source Loopback0
- neighbor 4.4.4.4 remote-as 100
- neighbor 4.4.4.4 update-source Loopback0
- !
- address-family vpnv4
-  neighbor 2.2.2.2 activate
-  neighbor 1.1.1.1 activate
-  neighbor 4.4.4.4 activate
- 
- exit-address-family
+ network 100.100.100.0 mask 255.255.255.0
+ network 100.100.100.100 mask 255.255.255.255
+ neighbor 100.100.100.2 remote-as 100
 !
 ip forward-protocol nd
 !
