--- a/project-files/dynamips/728b31ff-3a99-44e5-b655-d83e14f01351/configs/i5_startup-config.cfg
+++ b/project-files/dynamips/728b31ff-3a99-44e5-b655-d83e14f01351/configs/i5_startup-config.cfg
@@ -1,13 +1,9 @@
 !
-
-!
-! Last configuration change at 19:09:30 UTC Fri Mar 24 2023
-!
 version 15.2
 service timestamps debug datetime msec
 service timestamps log datetime msec
 !
-hostname CE4
+hostname CE1
 !
 boot-start-marker
 boot-end-marker
@@ -51,37 +47,25 @@ ip tcp synwait-time 5
 !
 !
 interface Loopback0
- ip address 40.40.40.40 255.255.255.255
+ ip address 5.5.5.5 255.255.255.255
 !
 interface FastEthernet0/0
  no ip address
  shutdown
  duplex full
 !
-interface GigabitEthernet1/0
- ip address 20.1.4.1 255.255.255.0
- negotiation auto
-!
 interface GigabitEthernet2/0
- no ip address
- shutdown
+ ip address 10.1.2.5 255.255.255.0
  negotiation auto
 !
-interface GigabitEthernet3/0
- no ip address
- shutdown
- negotiation auto
 !
-interface GigabitEthernet4/0
- no ip address
- shutdown
- negotiation auto
-!
-router bgp 500
+router bgp 200
+ bgp router-id 5.5.5.5
  bgp log-neighbor-changes
- network 20.1.4.0 mask 255.255.255.0
- network 40.40.40.40 mask 255.255.255.255
- neighbor 20.1.4.2 remote-as 100
+ network 5.5.5.5 mask 255.255.255.255
+ network 10.1.2.1 mask 255.255.255.0
+ neighbor 10.1.2.1 remote-as 100
+!
 !
 ip forward-protocol nd
 !
