--- a/project-files/dynamips/9ba8fa09-74fa-4b5d-909d-042883d108b6/configs/i3_startup-config.cfg
+++ b/project-files/dynamips/9ba8fa09-74fa-4b5d-909d-042883d108b6/configs/i3_startup-config.cfg
@@ -1,19 +1,14 @@
 !
-
-!
-! Last configuration change at 19:06:46 UTC Fri Mar 24 2023
-!
 version 15.2
 service timestamps debug datetime msec
 service timestamps log datetime msec
 !
-hostname CE1
+hostname P2
 !
 boot-start-marker
 boot-end-marker
 !
 !
-no logging console
 !
 no aaa new-model
 no ip icmp rate-limit unreachable
@@ -28,6 +23,7 @@ no ip domain lookup
 no ipv6 cef
 !
 !
+mpls label protocol ldp
 multilink bundle-name authenticated
 !
 !
@@ -52,27 +48,47 @@ ip tcp synwait-time 5
 !
 !
 interface Loopback0
- ip address 10.10.10.10 255.255.255.255
+ ip address 3.3.3.3 255.255.255.255
+ ip ospf 1 area 0
 !
 interface FastEthernet0/0
  no ip address
  shutdown
  duplex full
 !
-interface GigabitEthernet1/0
- ip address 20.1.1.1 255.255.255.0
- negotiation auto
-!
 interface GigabitEthernet2/0
- ip address 20.1.2.2 255.255.255.0
- shutdown
+ ip address 10.1.4.3 255.255.255.0
+ ip ospf 1 area 0
  negotiation auto
+ mpls ip
 !
-router bgp 200
+interface GigabitEthernet1/0
+ ip address 10.1.5.3 255.255.255.0
+ ip ospf 1 area 0
+ negotiation auto
+ mpls ip
+!
+router ospf 1
+ router-id 3.3.3.3
+ network 3.3.3.3 0.0.0.0 area 0
+ network 10.1.4.3 0.0.0.255 area 0
+ network 10.1.5.3 0.0.0.255 area 0
+!
+router bgp 100
+ bgp router-id 3.3.3.3
  bgp log-neighbor-changes
- network 10.10.10.10 mask 255.255.255.255
- network 20.1.1.0 mask 255.255.255.0
- neighbor 20.1.1.2 remote-as 100
+ neighbor 1.1.1.1 update-source Loopback0
+ neighbor 1.1.1.1 remote-as 100
+ neighbor 2.2.2.2 update-source Loopback0
+ neighbor 2.2.2.2 remote-as 100
+ neighbor 4.4.4.4 update-source Loopback0
+ neighbor 4.4.4.4 remote-as 100
+!
+address-family vpnv4
+ neighbor 1.1.1.1 activate
+ neighbor 2.2.2.2 activate
+ neighbor 4.4.4.4 activate
+exit-address-family
 !
 ip forward-protocol nd
 !
